--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
